--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://facebook.com/amdpce">
+                                <a href="https://facebook.com/amdpce" target="_blank" >
                                     <span class="social fa fa-facebook"></span>Facebook
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/amdpce">
+                                <a href="https://www.linkedin.com/in/amdpce" target="_blank" >
                                     <span class="social fa fa-linkedin"></span>Linkedin
                                 </a>
                             </li>
@@ -58,7 +58,7 @@
                     <div class="col-md-6">
                         <ul class="list-unstyled">
                             <li>
-                                <a href="https://www.instagram.com/amandapradoc/">
+                                <a href="https://www.instagram.com/amandapradoc/" target="_blank" >
                                     <span class="social fa fa-instagram"></span>Instagram
                                 </a>
                             </li>
@@ -68,7 +68,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/pceamanda">
+                                <a href="https://github.com/pceamanda" target="_blank" >
                                     <span class="social fa fa-github"></span>GitHub
                                 </a>
                             </li>
@@ -200,7 +200,7 @@
                         <div class="col-md-7">
                             <h4>Desenvolvedora Java</h4>
                             <p class="sub">
-                                <a href="https://www.tokiomarine.com.br/">Tokio Marine Seguradora</a>
+                                <a href="http://www.tokiomarine.com.br/">Tokio Marine Seguradora</a>
                             </p>
                         </div>
                         <div class="year col-md-5">
@@ -214,7 +214,7 @@
                         <div class="col-md-7">
                             <h4>Desenvolvedora de Portais</h4>
                             <p class="sub">
-                                <a href="https://www.magnasistemas.com.br/">Magna Sistemas</a>
+                                <a href="http://www.magnasistemas.com.br/">Magna Sistemas</a>
                             </p>
                         </div>
                         <div class="year col-md-5">
